2006-03-11 20:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewWithContentViewEditor.m: Minor formatting changes.
	* Palettes/4Data/DataPalette.m: Correction for bug#15988, patch by
	Matt Rice.

2006-03-11 16:57 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormTableViewEditor.m: Correction for
	bug#16050.

2006-03-10 01:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewEditor.m: Correction for bug#16049

2006-03-09 05:18 Gregory John Casamento <greg_casamento@yahoo.com>

	* Images/GormEHCoil.tiff
	* Images/GormEHLine.tiff
	* Images/GormEVCoil.tiff
	* Images/GormEVLine.tiff
	* Images/GormMHCoil.tiff
	* Images/GormMHLine.tiff
	* Images/GormMVCoil.tiff
	* Images/GormMVLine.tiff: Remade coil/lines to look cleaner.

2006-03-05 20:10 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormPalettesManager.m: Correction for bug#15989

2006-03-04 19:44 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormTableViewEditor.m: Correction for 
	bug#15987.

2006-02-22 22:52 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Overide arrangeInFront: so that when testing the interface
	it doesn't inadvertantly bring the edited window forward.

2006-02-20 08:54 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormScrollViewEditor.m: Correction for bug#15817.
	Returning only GormScrollViewEditor was causing an issue with
	editing tables.

2006-02-19 12:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormTextFieldAttributesInspector.m: Correction 
	for bug#15780.

2006-02-09 23:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInfo.plist: Change "RELEASE" to SVN to indicate that 1.0.5 is
	an unstable version.

2006-02-06 21:06 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormNSTableViewInspector.gorm
	* Palettes/3Containers/GormTableViewAttributesInspector.m: 